# lzallright

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  crane-maturin-tests.nix  crane-maturin.nix  flake.nix  index.html  lzallright.nix  lzallright.pyi  mkdocs.yml  objects.inv  pyproject.toml  renovate.json  sitemap.xml  tests.nix
.github/workflows/: CI.yml  Docs.yml  Update.yml
api/: index.html
benches/: compress.rs  lorem.txt
changelog/: index.html
changelog.d/: 11.changed.md  12.added.md  12.fixed.1.md  12.fixed.md  16.fixed.md  19.added  25.fixed  61.changed.md  8.added.1.md  8.added.md  93.changed.md  95.added.md
docs/: api.md
lzokay-sys/: Cargo.toml  build.rs  wrapper.hpp
lzokay-sys/lzokay/: lzokay.cpp
lzokay-sys/src/: lib.rs
python/lzallright/: __init__.py  _lzallright.pyi
src/: lib.rs  lzallright.rs  python.rs
tests/: test_python.py  test_roundtrip.py
