[package]
name = "lzallright"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = [
  "cdylib",
  "rlib"
]

[dependencies]
cxx = "1.0.94"
lzokay-sys = { path = "./lzokay-sys" }
pyo3 = "0.18.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "compress"
harness = false

[workspace]
resolver = "2"
members = [".", "lzokay-sys"]

[workspace.package]
version = "0.1.0"
authors = ["László Vaskó <1771332+vlaci@users.noreply.github.com>"]
license = "MIT"
edition = "2021"
