[package]
name = "lzallright"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

include = [
    "/pyproject.toml",
    "/pdm.lock",
    "/README.md",
    "/LICENSE",
    "/benches",
    "/rust-toolchain.toml",
    "/src",
    "/lzallright.pyi",
    "/tests/*.py",
    "!__pycache__",
    "!*.so",
]

[lib]
crate-type = [
  "cdylib",
  "rlib"
]

[dependencies]
cxx = "1.0.94"
lzokay-sys = { path = "./lzokay-sys" }
pyo3 = "0.18.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "compress"
harness = false

[workspace]
resolver = "2"
members = [".", "lzokay-sys"]

[workspace.package]
version = "0.2.1"
authors = ["László Vaskó <1771332+vlaci@users.noreply.github.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/vlaci/lzallright"
homepage = "https://github.com/vlaci/lzallright"
readme = "README.md"
