[project]
name = "lzallright"
authors = [
    {name = "László Vaskó", email = "1771332+vlaci@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.8"
dynamic = [
    'description',
    'license',
    'readme',
    'version'
]

[project.urls]
Repository = "https://github.com/vlaci/lzallright"
Changelog = "https://github.com/vlaci/pyperscan/blob/main/CHANGELOG.md"

[build-system]
requires = ["maturin>=0.15,<0.16"]
build-backend = "maturin"

[tool.maturin]
features = [
  "pyo3/extension-module",  # This is an extension module
  "pyo3/abi3-py38"          # https://docs.python.org/3/c-api/stable.html
]

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/vlaci/lzallright/tree/v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/vlaci/lzallright/issues/{issue})"

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[tool.pdm.scripts]
changelog = "towncrier"
venv = "pdm sync -d"
mypy = "mypy ."
pytest = "python -m pytest tests"
clippy = "cargo clippy --all-targets -- --deny warnings"
test = "cargo test"
all = { composite = ["clippy", "test", "venv", "mypy", "pytest"] }

[tool.pdm.dev-dependencies]
dev = [
    "black      ~= 23.3.0",
    "ruff       ~= 0.0.264",
    "mypy       ~= 1.2",
    "towncrier  ~= 22.12.0",
]
test = [
    "pytest     ~= 7.0.0",
]
