[package]
name = "lzokay-sys"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

build = "build.rs"

include = [
    "/build.rs",
    "/lzokay/*.cpp",
    "/lzokay/*.hpp",
    "/src",
    "wrapper.hpp",
]


[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
